--- a/31 Task Manager/styles.css
+++ b/31 Task Manager/styles.css
@@ -4,13 +4,29 @@
 .list {
     margin: 1em;
     list-style:none;
+    border: 1px dotted black;
+    background-color: rgb(247, 245, 245);
   }
 .task {
     background-color: rgb(248, 248, 248);
     padding: 10px;
     border-radius: 15px;
-    margin:10px;
 }
-.time {
-    display:none;
+
+#rmv {
+    display: none;
 }
+
+.label-success { 
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    vertical-align: center;
+    transform: rotate(30deg);
+    margin-top:15px;
+    margin-left:400px;
+    width:40%;
+}
+
+
