fix indentation and structure

--- a/31 Task Manager/styles.css
+++ b/31 Task Manager/styles.css
@@ -1,12 +1,14 @@
 #taskList {
     list-style: none;
 }
+
 .list {
     margin: 1em;
     list-style:none;
     border: 1px dotted black;
     background-color: rgb(247, 245, 245);
   }
+
 .task {
     background-color: rgb(248, 248, 248);
     padding: 10px;
@@ -33,9 +35,15 @@
     text-align: center;
     color:rgb(196, 60, 60);
 }
-.rm-all{
+.rm-all {
     padding:15px;
     background-color:rgb(228, 113, 113);
     margin:15px;
 }
 
+.done-btn {
+    background-color: green;
+    color:white;
+    padding: 10px;
+    content: "OK";
+}
